--- a/templates/csvFile.html
+++ b/templates/csvFile.html
@@ -8,6 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
+
+    <style>
+        .my-custom-scrollbar {
+            position: relative;
+            height: 600px;
+            overflow: auto;
+        }
+
+        .table-wrapper-scroll-y {
+            display: block;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -21,66 +34,66 @@
                 <li class="nav-item pe-3">
                     <a class="nav-link" href="/file">File</a>
                 </li>
-                <li class="nav-item pe-3">
-                    <a class="nav-link" href="/process">Results</a>
-                </li>
             </ul>
         </div>
     </nav>
 
     <div class="container my-4">
 
-        <nav aria-label="Page navigation example">
-            <ul class="pagination">
-              <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
-          </nav>
-          
-        <table class="table mb-3">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Age</th>
-                    <th scope="col">Experience</th>
-                    <th scope="col">Income</th>
-                    <th scope="col">ZIP Code</th>
-                    <th scope="col">Family</th>
-                    <th scope="col">CCAvg</th>
-                    <th scope="col">Education</th>
-                    <th scope="col">Mortgage</th>
-                    <th scope="col">Personal Loan</th>
-                    <th scope="col">Securities Account</th>
-                    <th scope="col">CD Account</th>
-                    <th scope="col">Online</th>
-                    <th scope="col">CreditCard</th>
+        <form action="/file" method="POST" class="needs-validation">
+            <div class="mb-3">
+                <h6><label for="len" class="form-label">Lenth of the list</label></h6>
+                <input class="form-control" name="len" type="number" id="len" placeholder="lenth" required>
+            </div>
 
-                </tr>
-            </thead>
-            <tbody>
-                {% for item in items %}
-                <tr>
-                    <td>{{item[0]}}</td>
-                    <td>{{item[1]}}</td>
-                    <td>{{item[2]}}</td>
-                    <td>{{item[3]}}</td>
-                    <td>{{item[4]}}</td>
-                    <td>{{item[5]}}</td>
-                    <td>{{item[6]}}</td>
-                    <td>{{item[7]}}</td>
-                    <td>{{item[8]}}</td>
-                    <td>{{item[9]}}</td>
-                    <td>{{item[10]}}</td>
-                    <td>{{item[11]}}</td>
-                    <td>{{item[12]}}</td>
-                    <td>{{item[13]}}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+            <div class="mb-3">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+
+        <div class="table-responsive-xxl table-wrapper-scroll-y my-custom-scrollbar">
+            <table class="mb-3 table table-striped table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Age</th>
+                        <th scope="col">Experience</th>
+                        <th scope="col">Income</th>
+                        <th scope="col">ZIP Code</th>
+                        <th scope="col">Family</th>
+                        <th scope="col">CCAvg</th>
+                        <th scope="col">Education</th>
+                        <th scope="col">Mortgage</th>
+                        <th scope="col">Personal Loan</th>
+                        <th scope="col">Securities Account</th>
+                        <th scope="col">CD Account</th>
+                        <th scope="col">Online</th>
+                        <th scope="col">CreditCard</th>
+
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in items %}
+                    <tr>
+                        <td>{{item[0]}}</td>
+                        <td>{{item[1]}}</td>
+                        <td>{{item[2]}}</td>
+                        <td>{{item[3]}}</td>
+                        <td>{{item[4]}}</td>
+                        <td>{{item[5]}}</td>
+                        <td>{{item[6]}}</td>
+                        <td>{{item[7]}}</td>
+                        <td>{{item[8]}}</td>
+                        <td>{{item[9]}}</td>
+                        <td>{{item[10]}}</td>
+                        <td>{{item[11]}}</td>
+                        <td>{{item[12]}}</td>
+                        <td>{{item[13]}}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 
 
@@ -88,6 +101,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
