--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Personal Loan Modeling</title>
 </head>
 
 <body>
@@ -21,82 +21,67 @@
                 <li class="nav-item pe-3">
                     <a class="nav-link" href="/file">File</a>
                 </li>
-                <li class="nav-item pe-3">
-                    <a class="nav-link" href="/process">Results</a>
-                </li>
             </ul>
         </div>
     </nav>
 
     <div class="container my-4">
 
-        <form action="/process" method="POST">
+        <h4>Prediction: {{prediction}}</h4>
+        <h4 class="mb-3">Prediction probability: {{predict_proba}}%</h4>
+
+        <form action="/process" method="POST" class="needs-validation">
 
             <div class="mb-3">
                 <h6><label for="age" class="form-label">Customer's age in completed years</label></h6>
-                <input class="form-control" name="age" type="number" id="age" placeholder="age">
+                <input class="form-control" name="age" type="number" id="age" placeholder="age" required>
             </div>
-
 
             <div class="mb-3">
                 <h6><label for="experience" class="form-label">Number of years of professional
                         experience</label></h6>
-                <input class="form-control" name="experience" type="number" id="experience" placeholder="experience">
+                <input class="form-control" name="experience" type="number" id="experience" placeholder="experience" required>
             </div>
-
-
 
             <h6><label for="income" class="form-label">Annual income of the customer ($000)</label></h6>
             <div class="input-group mb-3">
                 <span class="input-group-text">$</span>
-                <input class="form-control" name="income" type="number" id="income" placeholder="income">
+                <input class="form-control" name="income" type="number" id="income" placeholder="income" required>
                 <span class="input-group-text">.000</span>
             </div>
 
-
-
             <div class="mb-3">
                 <h6><label for="zip" class="form-label">Home Address ZIP code</label></h6>
-                <input class="form-control" name="ZIP_code" type="text" id="zip" placeholder="zip">
+                <input class="form-control" name="ZIP_code" type="text" id="zip" placeholder="zip" required>
             </div>
-
-
 
             <div class="mb-3">
                 <h6><label for="family_size" class="form-label">Family size of the customer</label></h6>
-                <input class="form-control" name="family_size" type="number" id="family_size" placeholder="Family size">
+                <input class="form-control" name="family_size" type="number" id="family_size" placeholder="Family size" required>
             </div>
-
-
 
             <h6><label for="CCAvg" class="form-label">Avg. spending on credit cards per month ($000)</label>
             </h6>
             <div class="input-group mb-3">
                 <span class="input-group-text">$</span>
-                <input class="form-control" name="CCAvg" type="number" step="any" id="CCAvg" placeholder="CCAvg">
+                <input class="form-control" name="CCAvg" type="number" step="any" id="CCAvg" placeholder="CCAvg" required>
                 <span class="input-group-text">.000</span>
             </div>
 
-
             <h6><label for="education" class="form-label">Education Level</label></h6>
             <select class="form-select mb-3" name="education" id="education">
-                <option selected>Select Education Level</option>
-                <option value="1">Undergrad</option>
+                <option value="1" selected>Undergrad</option>
                 <option value="2">Graduate</option>
                 <option value="3">Advanced/Professional</option>
             </select>
-
 
             <h6><label for="mortgage" class="form-label">Value of house mortgage if any ($000)</label></h6>
             <div class="input-group mb-3">
                 <span class="input-group-text">$</span>
                 <input class="form-control" name="mortgage" type="number" step="any" id="mortgage"
-                    placeholder="house mortgage">
+                    placeholder="house mortgage" required>
                 <span class="input-group-text">.000</span>
             </div>
-
-
-
 
             <div class="form-check form-switch mb-3">
                 <input class="form-check-input" name="securities_account" type="checkbox" role="switch"
@@ -130,25 +115,26 @@
 
     </div>
 
-    <nav class="navbar navbar-light bg-light">
-        <div class="container d-flex justify-content-center">
-            <ul class="navbar-nav flex-row">
-                <li class="nav-item pe-3">
-                    <p>Dmytro</p>
-                </li>
-                <li class="nav-item pe-3">
-                    <p>Griffin</p>
-                </li>
-                <li class="nav-item pe-3">
-                    <p>COMP 740</p>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+    <script>
+        $('form').submit(function () {
+            $(this).find('input[type="checkbox"]').each(function () {
+                var checkbox = $(this);
+                if (checkbox.is(':checked')) {
+                    checkbox.attr('value', '1');
+                } else {
+                    checkbox.after().append(checkbox.clone().attr({ type: 'hidden', value: 0 }));
+                    checkbox.prop('disabled', true);
+                }
+            })
+        });
+    </script>
 
 </body>
 
