--- a/templates/csvFile.html
+++ b/templates/csvFile.html
@@ -67,7 +67,7 @@
                         <th scope="col">Personal Loan</th>
                         <th scope="col">Securities Account</th>
                         <th scope="col">CD Account</th>
-                        <th scope="col">Online</th>
+                        <th scope="col">Online facilities</th>
                         <th scope="col">CreditCard</th>
 
                     </tr>
