--- a/templates/csvFile.html
+++ b/templates/csvFile.html
@@ -43,7 +43,7 @@
         <form action="/file" method="POST" class="needs-validation">
             <div class="mb-3">
                 <h6><label for="len" class="form-label">Lenth of the list</label></h6>
-                <input class="form-control" name="len" type="number" id="len" placeholder="lenth" required>
+                <input class="form-control" name="len" type="number" id="len" placeholder="length" required>
             </div>
 
             <div class="mb-3">
